added 10 li unto ul

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <button id="say-hello">Say Hello</button>
-  
-  <script src="./script.js"></script>
+  <button id="say-hello">Hello</button>
+
+  <ul>
+    <li>Example1</li>
+    <li>Example2</li>
+    <li>Example3</li>
+    <li>Example4</li>
+    <li>Example5</li>
+    <li>Example6</li>
+    <li>Example7</li>
+    <li>Example8</li>
+    <li>Example9</li>
+    <li>Example10</li>
+  </ul>
+    <script src="./script.js"></script>
 </body>
 </html>
